reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-content__src__validate.rs_line_199_col_5_001.log

*** crates/tracewake-content/src/validate.rs:199:5: replace validate_raw_lines -> Vec<ContentValidationError> with vec![Default::default()]

*** mutation diff:
--- crates/tracewake-content/src/validate.rs
+++ replace validate_raw_lines -> Vec<ContentValidationError> with vec![Default::default()]
@@ -191,83 +191,17 @@
                 "unsupported fixture schema version {}",
                 fixture.schema_version.as_str()
             ),
         ));
     }
 }
 
 fn validate_raw_lines(bytes: &[u8]) -> Vec<ContentValidationError> {
-    let mut errors = Vec::new();
-    let text = match std::str::from_utf8(bytes) {
-        Ok(text) => text,
-        Err(_) => {
-            errors.push(ContentValidationError::new(
-                ValidationPhase::ParseSchema,
-                "fixture",
-                "non_utf8",
-                "fixture source must be UTF-8",
-            ));
-            return errors;
-        }
-    };
-
-    for (index, line) in text.lines().enumerate() {
-        let line_no = index + 1;
-        let tag = line.split('|').next().unwrap_or_default();
-        if is_forbidden_key(tag) {
-            let phase = if is_player_key(tag) {
-                ValidationPhase::NoPlayer
-            } else {
-                ValidationPhase::NoScript
-            };
-            errors.push(ContentValidationError::new(
-                phase,
-                format!("line[{line_no}].{tag}"),
-                "forbidden_form",
-                format!("forbidden content form {tag}"),
-            ));
-        } else if content_field_by_canonical_key(tag).is_none() {
-            errors.push(ContentValidationError::new(
-                ValidationPhase::ParseSchema,
-                format!("line[{line_no}].{tag}"),
-                "unknown_field",
-                format!("unknown content section {tag}"),
-            ));
-            if contains_prose_born_fact_marker(line) {
-                errors.push(ContentValidationError::new(
-                    ValidationPhase::NoScript,
-                    format!("line[{line_no}].{tag}"),
-                    "prose_born_fact",
-                    "prose or notes must not imply culprit, outcome, or hidden truth facts",
-                ));
-            }
-            if tag.starts_with("routine_") && contains_direct_state_or_script_marker(line) {
-                errors.push(ContentValidationError::new(
-                    ValidationPhase::NoScript,
-                    format!("line[{line_no}].{tag}"),
-                    "authored_shortcut_effect",
-                    format!("unknown routine content section {tag} contains behavior shortcut"),
-                ));
-            }
-        }
-
-        let parts = line.split('|').collect::<Vec<_>>();
-        if parts.get(1).is_some_and(|value| value.is_empty()) {
-            if let Some(registration) = content_field_by_canonical_key(tag) {
-                errors.push(ContentValidationError::new(
-                    registration.validation_phase,
-                    format!("line[{line_no}].{tag}.id"),
-                    registration.diagnostic_code,
-                    "stable ID field must not be empty",
-                ));
-            }
-        }
-    }
-    errors
+    vec![Default::default()] /* ~ changed by cargo-mutants ~ */
 }
 
 fn validate_ids(fixture: &FixtureSchema, errors: &mut Vec<ContentValidationError>) {
     let mut seen: BTreeMap<String, Vec<String>> = BTreeMap::new();
     seen.entry(fixture.fixture_id.as_str().to_string())
         .or_default()
         .push("fixture.fixture_id".to_string());
     seen.entry(fixture.schema_version.as_str().to_string())


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-content v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-content): the file `crates/tracewake-content/src/validate.rs` has changed (1781903903.099925256s, 2s after last build at 1781903901.599925254s)
   Compiling tracewake-content v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-content)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_content --edition=2021 crates/tracewake-content/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=d243c079ea17582c -C extra-filename=-b18457137da16d86 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/tests/../../tracewake-content/src/validate.rs` has changed (1781903903.099925256s, 2s after last build at 1781903901.595925254s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name hidden_truth_gates --edition=2021 crates/tracewake-core/tests/hidden_truth_gates.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=6827b5805fd85fab -C extra-filename=-499dcae7fdb8d686 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_content --edition=2021 crates/tracewake-content/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=f1a402c06b6200e9 -C extra-filename=-052d9f0ddd5654e3 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rmeta`
warning: unused import: `content_field_by_canonical_key`
  --> crates/tracewake-content/src/validate.rs:15:5
   |
15 |     content_field_by_canonical_key, routine_assignment_actor_suffix,
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `ContentValidationError: Default` is not satisfied
   --> crates/tracewake-content/src/validate.rs:199:10
    |
199 |     vec![Default::default()] /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `ContentValidationError`
   --> crates/tracewake-content/src/validate.rs:69:1
    |
 69 | pub struct ContentValidationError {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-content` (lib) generated 1 warning
error: could not compile `tracewake-content` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_content --edition=2021 crates/tracewake-content/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=f1a402c06b6200e9 -C extra-filename=-052d9f0ddd5654e3 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rmeta` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: `tracewake-content` (lib test) generated 1 warning (1 duplicate)
error: could not compile `tracewake-content` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_content --edition=2021 crates/tracewake-content/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=d243c079ea17582c -C extra-filename=-b18457137da16d86 --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps --extern tracewake_core=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib` (exit status: 1)

*** result: Failure(101)
